--- a/ansible/install
+++ b/ansible/install
@@ -7,26 +7,39 @@ set -e
 SCRIPT_DIR="$( cd "$( dirname "${BASH_SOURCE[0]}" )" && pwd )"
 
 
+# check if distro is Ubuntu 
+if [ ! -f /etc/lsb-release ]; then
+  echo "This script is only for Ubuntu"
+  exit 1
+fi
+
+# check if the ubuntu version is 22.04 or later 
+
+source /etc/lsb-release
+if [ "$DISTRIB_RELEASE" != "22.04" ]; then
+  echo "This script is only for Ubuntu 22.04 or later"
+  exit 1
+fi
+
+
 function have {
   command -v "$1" &>/dev/null
 }
 
-# install python3 and pip3
-if ! have python3; then
-  sudo apt-get update
-  sudo apt-get install -y python3
-  sudo apt-get install -y python3-pip
-  pip3 install --upgrade pip
+# install pipx
+if ! have pipx; then
+  sudo apt update -y
+  sudo apt install pipx -y
 fi
 
-# install ansible using pip
+# install ansible
 if ! have ansible; then
-  pip3 install ansible
+  pipx install --include-deps ansible
+  pipx ensurepath
+  source ~/.bashrc # update the path
 fi
 # install ansible dependencies
 ansible-galaxy install -r $SCRIPT_DIR/requirements.yml
 
-
-
 # Run Ansible
-ansible-playbook -i $SCRIPT_DIR/hosts $SCRIPT_DIR/linux.yml --ask-become-pass
+ansible-playbook -i $SCRIPT_DIR/hosts $SCRIPT_DIR/linux.yml --ask-become-pass -vvv
