--- a/install
+++ b/install
@@ -1,4 +1,4 @@
-##!/bin/bash
+#!/bin/bash
 
 # this script is inside our project root directory
 # we need to declare an environment variable to store the project root directory
